Added the list and stuff

--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -25,4 +25,16 @@
 
   img{
       width:100%;
+      height: 15vh;
+      border-radius: 10%;
+  }
+
+  .firstRow
+  {
+      text-align: right;
+  }
+
+  .fourthRow
+  {
+      text-align: right;
   }
