--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,11 +1,13 @@
 .individualItem
 {
     margin-bottom: 10px;
+    padding:5px;
 }
 
 .parentContainer
 {
     display: flex;
+    font-family: 'Poppins', sans-serif;
 }
 
 .imagePart
@@ -16,6 +18,7 @@
 .detailsPart
 {
     flex:2;
+    padding-left: 5px;
 }
 
 .example-header-image {
@@ -37,4 +40,20 @@
   .fourthRow
   {
       text-align: right;
+      padding-top: 20px;
+      font-size: 25px;
+      font-family: 'Bebas Neue', cursive;
+  }
+
+  .secondRow
+  {
+      font-size: 19px;
+      font-weight: 600;
+      color: blueviolet;
+  }
+
+  .addressRow
+  {
+      font-size: 15px;
+      color: gray;
   }
