--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,7 +79,14 @@
   </div>
   <div class="mapPart">
       <mat-card>
-          <p-gmap [options]="options"  [overlays]="overlays"  [style]="{'width':'100%','height':'92vh'}"  (onOverlayClick)="mapMarkerClick($event)" ></p-gmap>
+          <p-gmap #gmap [options]="options"  
+          [overlays]="backService.overlays"  
+          [style]="{'width':'100%','height':'92vh'}" 
+          (onMapReady)="seeIT($event,gmap.getMap())"  
+          (onOverlayClick)="mapMarkerClick($event)" 
+          (onMapDragEnd)="handleMapClick($event, gmap.getMap())"
+          (onZoomChanged) = "onMapZoom($event)"
+          ></p-gmap>
       </mat-card>
   </div>
 
